# barnacle

./: .dockerignore  .gitignore  Dockerfile  README.md  barnacle-config.example.yaml  justfile  manifests_smoke.txt  pyproject.toml
.github/workflows/: docker-build.yml
data/: lapidus_lar.csv
data/manifests/: README.md  all.txt  tranche-01.txt  tranche-02.txt  tranche-03.txt  tranche-04.txt  tranche-05.txt  tranche-06.txt
docker_test/output/: test.jsonl
docs/: batch-processing.md  deployment-plan.md  dev-bookmark.md  docker.md  next-session.md  overview.md  roadmap.md  session-context-2026-01-24.md  slurm.md  tufts_hpc.md
docs/mvp/: contracts.md
scripts/: batch_process.sh  prepare_collection.py  prepare_manifests.py
slurm/: process_manifest.sh  run_collection.sh
src/barnacle/: cli.py  ocr.py
src/barnacle/iiif/: __init__.py
src/barnacle/iiif/v2/: __init__.py  loaders.py  models.py  traversal.py  validation.py
src/barnacle/pipeline/: __init__.py  coordinator.py  output.py  worker.py
tests/: test_iiif_models.py  test_iiif_traversal.py  test_iiif_validation.py  test_pipeline_output.py
tests/fixtures/: collection_simple.json  manifest_invalid.json  manifest_simple.json
tools/patches/: ocr_backend.patch
