[project]
name = "barnacle"
version = "0.1.0"
description = "IIIF-based OCR/ATR tooling and pipelines for high-quality text extraction from scanned resources."
authors = [
  {name = "Cliff Wulfman", email = "cwulfman@princeton.edu"},
]
dependencies = [
  "pydantic>=2.8",
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.20.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.scripts]
barnacle = "barnacle.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "ruff>=0.6",
  "types-requests>=2.32.0.20240712", # harmless even if unused
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["barnacle"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]

# If you start seeing "cannot be resolved" for src-layout imports, add:
# extraPaths = ["src"]

# Practical defaults for MVP:
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --maxfail=1 --color=yes --strict-markers --durations=10"

